objects/maps__AdvRoutePromotionalPeriodConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>maps__AdvRouteDataSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Advanced Route Data Set</label>
        <referenceTo>maps__AdvRouteDataSet__c</referenceTo>
        <relationshipLabel>Maps Advanced Promotional Period Configurations</relationshipLabel>
        <relationshipName>PromotionalPeriodConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__EndDateFieldApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MaxDaysBetweenVisitsFieldApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Maximum Days Between Visits Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MinDaysBetweenVisitsFieldApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Minimum Days Between Visits Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__MoreThanOneVisitPerPeriod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to show if the promotional period has been set up to require more than one visit during this time</description>
        <label>More than one visit per promo period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__PromoObjectApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Promo Object Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PromoObjectRelationshipFieldApi__c</fullName>
        <description>The Api name of a field that looks up to the routed object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Api name of a field that looks up to the routed object</inlineHelpText>
        <label>Promo Object Relationship Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__StartDateFieldApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Promotional Period Config</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Advanced Promotional Period Config</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Promotional Period Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>